--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "delete-dups",
+  "name": "delete-dups-js",
   "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "description": "delete duplicated files",
+  "main": "./bin/www",
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
+    "bug": "~0.0.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.13",
     "morgan": "~1.9.0"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node ./bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AsharDweedar/delete-dups-js.git"
+  },
+  "keywords": [
+    "delete",
+    "duplicates"
+  ],
+  "author": "AsharDweedar",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AsharDweedar/delete-dups-js/issues"
+  },
+  "homepage": "https://github.com/AsharDweedar/delete-dups-js#readme"
 }
