--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "bug": "~0.0.0",
+    "pug": "~0.0.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.13",
     "morgan": "~1.9.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon  ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
